[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = "0.11.12"
